src/components/ProjectSlide.module.scss
.projectContainer {
  position: fixed;
  top: 0;
  left: 0;
  display: grid;
  grid-template-rows: 100vw auto;
  grid-template-columns: 1fr;
  width: 100vw;
  height: 100%;
  @media (min-width: 576px) {
    grid-template-rows: 75vw auto;
  }
  @media (min-width: 768px) {
    grid-template-rows: 50vw auto;
  }
  @media (min-width: 992px) {
    grid-template-rows: auto;
    grid-template-columns: 2fr minMax(470px, 1fr);
  }

  &.isMoving {
    .imageBgLayer,
    .contentBgLayer {
      transition: none;
    }
  }

  &.contentIsVisible {
    .imageCol img,
    .content {
      animation: fadeIn 0.5s ease 0.35s forwards;
    }
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.imageCol {
  position: relative;
  overflow: hidden;

  img {
    position: relative;
    padding-top: 44px;
    object-fit: contain;
    @media (min-width: 576px) {
      padding-top: 32px;
    }
    @media (min-width: 768px) {
      padding: 16px 0;
    }
  }
}

.contentCol {
  position: relative;
  display: flex;
  align-items: flex-end;
  justify-content: stretch;
  overflow: hidden;

  p {
    margin: 1em 0;
  }
}

.content {
  position: relative;
  max-height: 100%;
  padding: 32px var(--wrapper-padding-x);
  overflow: auto;
  @media (min-width: 768px) {
    padding: 100px 60px 40px;
  }
}

.imageCol img,
.content {
  opacity: 0;
}

.headline {
  margin: 0 0 20px;
  @media (min-width: 768px) {
    margin: 0 0 30px;
  }
}

.description {
  margin-bottom: 40px;
  color: var(--neutral-600);

  &:last-child {
    margin-bottom: 0;
  }
}

.fade {
  position: absolute;
  left: 0;
  width: 100%;
  height: 100px;
  pointer-events: none;
  opacity: 0;
  transition: opacity 0.25s ease;

  &.fadeIsVisible {
    opacity: 1;
  }
}

.fadeTop {
  top: 0;
  background: linear-gradient(to top, transparent 0%, var(--neutral-100) 100%);
}

.fadeBottom {
  bottom: 0;
  background: linear-gradient(to bottom, transparent 0%, var(--neutral-100) 100%);
}

.imageBgLayer,
.contentBgLayer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: left 0.35s ease;
}

.contentBgLayer {
  background-color: var(--neutral-100);
  box-shadow: 0 0 0 1px var(--neutral-400);
}

